<resources>
    <string name="app_name">Recito</string>

    //Connection_page_____________________________________________________________
    <string name="page_title_Connection">Veuillez vous connecter</string>
    <string name="login_hint_Connection">Identifiant</string>
    <string name="password_hint_Connection">Mot de passe</string>
    <string name="connecion_bouton_label_Connection">Connexion</string>

    //Connection_page_____________________________________________________________

    //Sign_Up_Page________________________________________________________________
    <string name="page_title_Sign_Up">Création de compte</string>
    <string name="login_label_Sign_Up">Identifiant:</string>
    <string name="login_hint_Sign_Up">anonyme123</string>
    <string name="mail_label_Sign_Up">Email:</string>
    <string name="mail_hint_Sign_Up">abc@xyz.com</string>
    <string name="password_label_Sign_Up">Mot de passe:</string>
    <string name="password_hint_Sign_Up">123456789abc_</string>
    <string name="verification_password_label_Sign_Up">Vérification mdp:</string>
    <string name="verification_password_hint_Sign_Up">123456789abc_</string>
    <string name="validation_bouton_label_Sign_Up">Valider</string>


    //Sign_Up_Page_________________________________________________________________

    //Menu_________________________________________________________________________
    <string name="library_item_Menu">Bibliothèque</string>
    <string name="score_item_Menu">Score</string>
    <string name="groupes_item_Menu">Groupes</string>
    <string name="friends_item_Menu">Amis</string>
    <string name="main_menu_item_Menu">Menu</string>
    <string name="deconnexion_item_Menu">Déconnection</string>
    <string name="help_item_Menu">Aide</string>
    <string name="about_item_Menu">A propos</string>

    //Menu_________________________________________________________________________

    //Item_Text____________________________________________________________________

    <string name="text_Item_Text">Ceci est un texte à lire par l\'application. (PS : ça fonctionne !!)</string>
    <string name="title_Item_Text">Texte à apprendre :</string>
    <string name="start_bouton_Item_Text">Réviser le texte</string>
    <string name="read_bouton_Item_Text">Lecture</string>
    <string name="seConnecter_bouton_label_Accueil">Se connecter</string>
    <string name="incription_bouton_label_Accueil">S\'inscrire</string>
    <string name="MessagePreventif_Reciter">Le texte que vous allez dire va s\'afficher ici.</string>
    <string name="Terminer_button_Reciter">Terminer</string>
    <string name="titre_Score_ResultatSimple">Votre score</string>
    <string name="bareme_Reciter">/100</string>
    <string name="Details_button_ResultatSimple">Détails résultat</string>
    <string name="Reessayer_button_ResultatSimple">Réessayer</string>
    <string name="Terminer_button_ResultatSimple">Terminer</string>
    <string name="titre_Text">Sélectionnez les répliques que vous devez apprendre :</string>

    //Item_Text____________________________________________________________________

    //Load_Text_Page_______________________________________________________________
    <string name="title_load_page">Selectionner votre texte</string>
    <string name="label_for_load_page">Choisissez le fichier: </string>
    <string name="hint_for_load_page">format pdf</string>
    <string name="content_description_image_button_for_load_page">Browse the document tree to choose a pdf file</string>
    <string name="button_for_load_page">Valider</string>

    //Load_Text_Page_______________________________________________________________

</resources>
